--- a/filemapper/dockerfile
+++ b/filemapper/dockerfile
@@ -9,6 +9,6 @@ RUN mvn clean package -DskipTests
 FROM eclipse-temurin:21-jre
 WORKDIR /app
 # Copy JAR from the builder stage
-COPY --from=builder /app/target/file-node-0.0.1-SNAPSHOT.jar app.jar
+COPY --from=builder /app/target/filemapper-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "app.jar"]
