--- a/k8s-file-node.yaml
+++ b/k8s-file-node.yaml
@@ -51,3 +51,39 @@ spec:
         resources:
           requests:
             storage: 1Gi
+
+---
+# 🟢 Stateless Service for filemapper
+apiVersion: v1
+kind: Service
+metadata:
+  name: filemapper
+spec:
+  selector:
+    app: filemapper
+  ports:
+    - port: 8080
+      targetPort: 8080
+  type: ClusterIP
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: filemapper
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: filemapper
+  template:
+    metadata:
+      labels:
+        app: filemapper
+    spec:
+      containers:
+        - name: filemapper
+          image: local/filemapper:latest
+          imagePullPolicy: Never
+          ports:
+            - containerPort: 8080
+
