--- a/k8s-file-node.yaml
+++ b/k8s-file-node.yaml
@@ -87,3 +87,38 @@ spec:
           ports:
             - containerPort: 8080
 
+---
+# 🟢 Stateless Service for storageservice
+apiVersion: v1
+kind: Service
+metadata:
+  name: storage-service
+spec:
+  selector:
+    app: storage-service
+  ports:
+    - port: 8080
+      targetPort: 8080
+  type: ClusterIP
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: storage-service
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: storage-service
+  template:
+    metadata:
+      labels:
+        app: storage-service
+    spec:
+      containers:
+        - name: storage-service
+          image: local/storage-service:latest
+          imagePullPolicy: Never
+          ports:
+            - containerPort: 8080
+
