--- a/filemapper/pom.xml
+++ b/filemapper/pom.xml
@@ -39,6 +39,18 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>33.1.0-jre</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.42</version> <!-- use latest stable version -->
+        </dependency>
+
         <!-- Optional bridges if you use Log4j or java.util.logging -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
